--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>SQL_Directory_web_application</title>
-    <base href="/wwwroot/" />
+    <base href="/SQL_Directory_web_application/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="SQL_Directory_web_application.styles.css" rel="stylesheet" />
